--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ol>
       <li>Open terminal in git-init folder</li>
       <li>git init</li>
+      <li>learning to commit, add, and push</li>
     </ol>
   </body>
 </html>
